--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Opciones
+                Contacto
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Contacto</a></li>
+                <li><a class="dropdown-item" href="#">Sobre nosotros</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><a class="dropdown-item" href="#">Centro de ayuda</a></li>
               </ul>
             </li>
             <li class="nav-item">
@@ -51,74 +51,101 @@
     </nav>
   </header>
   
-
-  <!-- Carousel-->
-  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  <div class="container">
+    <!-- Carousel-->
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="images/Cerro-Manquehue.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Cerro Manquehue</h5>
+            <p>Parque para realizar senderismo en Santiago</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="images/parque-natural-aguas-ramon.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Parque natural Aguas de Ramón</h5>
+            <p>Parque para realizar senderismo en Santiago</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="images/torresdel-paine-700x367.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Parque natural Torres del Paine</h5>
+            <p>Parque para senderismo y camping en región de Magallanes y Antártica Chilena</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="images/Cerro-Manquehue.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Cerro Manquehue</h5>
-          <p>Parque para realizar senderismo en Santiago</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="images/parque-natural-aguas-ramon.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Parque natural Aguas de Ramón</h5>
-          <p>Parque para realizar senderismo en Santiago</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="images/torresdel-paine-700x367.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Parque natural Torres del Paine</h5>
-          <p>Parque para senderismo y camping en región de Magallanes y Antártica Chilena</p>
-        </div>
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
   </div>
 
   <div class="container">
+    <h3>Recomendados</h3>
       <div class="row">
         <div class="col-12 col-sm-4">
-          <div class="card">
-            <p>Parque 1</p>
-            <img src="images/Cerro-Manquehue.jpg" class="d-block w-100" alt="...">
+          <div class="card" style="width: 18rem;">
+            <img src="images/Cerro-Manquehue.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Cerro Manquehue</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, ea hic molestias animi, illum dicta, id consequuntur amet aspernatur minima ullam non sunt laboriosam voluptate perferendis! Numquam iusto illum officiis.<p>
+            </div>
+            <div class="card-body">
+              <a href="#" class="card-link">Ver más...</a>
+            </div>
           </div>
         </div>
 
         <div class="col-12 col-sm-4">
-          <div class="card">
-            <p>Parque 2</p>
-            <img src="images/parque-natural-aguas-ramon.jpg" class="d-block w-100" alt="...">
+          <div class="card" style="width: 18rem;">
+            <img src="images/parque-natural-aguas-ramon.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Aguas de Ramón</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, ea hic molestias animi, illum dicta, id consequuntur amet aspernatur minima ullam non sunt laboriosam voluptate perferendis! Numquam iusto illum officiis.<p>
+            </div>
+            <div class="card-body">
+              <a href="#" class="card-link">Ver más...</a>
+            </div>
           </div>
         </div>
 
         <div class="col-12 col-sm-4">
-          <div class="card">
-            <p>Parque 3</p>
-            <img src="images/torresdel-paine-700x367.jpg" class="d-block w-100" alt="...">
+          <div class="card" style="width: 18rem;">
+            <img src="images/torresdel-paine-700x367.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Torres del Paine</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, ea hic molestias animi, illum dicta, id consequuntur amet aspernatur minima ullam non sunt laboriosam voluptate perferendis! Numquam iusto illum officiis.<p>
+            </div>
+            <div class="card-body">
+              <a href="#" class="card-link">Ver más...</a>
+            </div>
           </div>
         </div>
   </div>
     
-  <footer>
+  <footer class="bg-light text-center text-lg-start">
     
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2022 Copyright:
+      <a class="text-dark">Todo Rutas</a>
+    </div>
+    <!-- Copyright -->
   </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
   <!-- <script src="node_modules/@popperjs/dist/umd/popper.min.js"></script> -->
