Arreglo card tamaño

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <title>Todo Rutas</title>
 </head>
 <body>
+  <!-- NavBar -->
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary" >
       <div class="container container-fluid">
@@ -54,9 +55,10 @@
       </div>
     </nav>
   </header>
+
   <br>
+  <!-- Carousel-->
   <div class="container">
-    <!-- Carousel-->
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -98,11 +100,12 @@
   </div>
 
   <br>
+  <!-- Recomendados -->
   <div class="container">
-    <h3>Recomendados</h3>
+    <h3 class="text-dark">Recomendados</h3>
       <div class="row">
-        <div class="col-12 col-sm-4">
-          <div class="card" style="width: 18rem;">
+        <div class="col-12 col-md-4">
+          <div class="card">
             <img src="./images/Cerro-Manquehue.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Cerro Manquehue</h5>
@@ -114,8 +117,8 @@
           </div>
         </div>
 
-        <div class="col-12 col-sm-4">
-          <div class="card" style="width: 18rem;">
+        <div class="col-12 col-md-4">
+          <div class="card">
             <img src="./images/parque-natural-aguas-ramon.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Aguas de Ramón</h5>
@@ -127,8 +130,8 @@
           </div>
         </div>
 
-        <div class="col-12 col-sm-4">
-          <div class="card" style="width: 18rem;">
+        <div class="col-12 col-md-4">
+          <div class="card">
             <img src="./images/torresdel-paine-700x367.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Torres del Paine</h5>
@@ -143,6 +146,7 @@
 
   <br>
 
+  <!-- Footer -->
   <footer>
     <!-- Grid container -->
     <div class="container p-4 bg-secondary text-center text-lg-start">
