Tarjetas, imágenes, navbar modificadas

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <!-- NavBar -->
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary" >
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
       <div class="container container-fluid">
         <a class="navbar-brand" href="./index.html">Todo Rutas</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -74,7 +74,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="./images/parque-natural-aguas-ramon.jpg" class="d-block w-100" alt="...">
+          <img src="./images/aguas-ramon.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Parque natural Aguas de Ramón</h5>
             <p>Parque para realizar senderismo en Santiago</p>
@@ -119,7 +119,7 @@
 
         <div class="col-12 col-md-4">
           <div class="card">
-            <img src="./images/parque-natural-aguas-ramon.jpg" class="card-img-top" alt="...">
+            <img src="./images/aguas-ramon.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Aguas de Ramón</h5>
               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, ea hic molestias animi, illum dicta, id consequuntur amet aspernatur minima ullam non sunt laboriosam voluptate perferendis! Numquam iusto illum officiis.<p>
@@ -227,7 +227,7 @@
     <!-- Copyright -->
   </footer>
 
-  <script src="node_modules/@popperjs/dist/umd/popper.min.js"></script>
+  <script src="./node_modules/@popperjs/dist/umd/popper.min.js"></script>
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
