Mejora tarjetas en parques.html Cambio de algunos colores en custom.scss y se agrega padding al body para que no interfiera con navbar

--- a/index.html
+++ b/index.html
@@ -30,10 +30,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="views/parques.html">Parques</a>
+              <a class="nav-link" aria-current="page" href="views/parques.html">Parques</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -56,9 +53,8 @@
     </nav>
   </header>
 
-  <br>
   <!-- Carousel-->
-  <div class="container">
+  <div class="container mb-3">
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -99,62 +95,62 @@
     </div>
   </div>
 
-  <br>
   <!-- Recomendados -->
   <div class="container">
-    <h3 class="text-dark">Recomendados</h3>
-      <div class="row">
-        <div class="col-12 col-md-4">
-          <div class="card">
-            <img src="./images/Cerro-Manquehue.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Cerro Manquehue</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, ea hic molestias animi, illum dicta, id consequuntur amet aspernatur minima ullam non sunt laboriosam voluptate perferendis! Numquam iusto illum officiis.<p>
-            </div>
-            <div class="card-body">
-              <a href="#" class="card-link">Ver más...</a>
-            </div>
-          </div>
-        </div>
+    <h3 class="h2 text-dark">Recomendados</h3>
 
-        <div class="col-12 col-md-4">
-          <div class="card">
-            <img src="./images/aguas-ramon.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Aguas de Ramón</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, ea hic molestias animi, illum dicta, id consequuntur amet aspernatur minima ullam non sunt laboriosam voluptate perferendis! Numquam iusto illum officiis.<p>
-            </div>
-            <div class="card-body">
-              <a href="#" class="card-link">Ver más...</a>
-            </div>
+    <div class="row mb-5">
+      <div class="col-12 col-md-4">
+        <div class="card bg-secondary">
+          <img src="./images/Cerro-Manquehue.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Cerro Manquehue</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, ea hic molestias animi, illum dicta, id consequuntur amet aspernatur minima ullam non sunt laboriosam voluptate perferendis! Numquam iusto illum officiis.<p>
+          </div>
+          <div class="card-body">
+            <a href="#" class="card-link">Ver más...</a>
           </div>
         </div>
+      </div>
 
-        <div class="col-12 col-md-4">
-          <div class="card">
-            <img src="./images/torresdel-paine-700x367.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Torres del Paine</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, ea hic molestias animi, illum dicta, id consequuntur amet aspernatur minima ullam non sunt laboriosam voluptate perferendis! Numquam iusto illum officiis.<p>
-            </div>
-            <div class="card-body">
-              <a href="#" class="card-link">Ver más...</a>
-            </div>
+      <div class="col-12 col-md-4">
+        <div class="card bg-secondary">
+          <img src="./images/aguas-ramon.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Aguas de Ramón</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, ea hic molestias animi, illum dicta, id consequuntur amet aspernatur minima ullam non sunt laboriosam voluptate perferendis! Numquam iusto illum officiis.<p>
+          </div>
+          <div class="card-body">
+            <a href="#" class="card-link">Ver más...</a>
           </div>
         </div>
+      </div>
+
+      <div class="col-12 col-md-4">
+        <div class="card bg-secondary">
+          <img src="./images/torresdel-paine-700x367.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Torres del Paine</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, ea hic molestias animi, illum dicta, id consequuntur amet aspernatur minima ullam non sunt laboriosam voluptate perferendis! Numquam iusto illum officiis.<p>
+          </div>
+          <div class="card-body">
+            <a href="#" class="card-link">Ver más...</a>
+          </div>
+        </div>
+      </div>
+
   </div>
 
-  <br>
 
   <!-- Footer -->
   <footer>
     <!-- Grid container -->
-    <div class="container p-4 bg-secondary text-center text-lg-start">
+    <div class="container p-4 bg-info text-center text-lg-start">
       <!--Grid row-->
       <div class="row">
         <!--Grid column-->
         <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-          <h5 class="text-uppercase text-light">Acceso empleados</h5>
+          <h5 class="text-uppercase text-light">Login</h5>
   
           <ul class="list-unstyled mb-0">
             <li>
