--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"> 
     -->
 
-    <title>Todo Ruta</title>
+    <title>Todo Rutas</title>
 </head>
 <body>
   <!-- NavBar -->
