Imagen index altura

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./images/Cerro-Manquehue.jpg" class="d-block w-100" alt="...">
+          <img src="./images/Cerro-Manquehue.jpg" class="d-block w-100" alt="..." height="400px">
           <div class="carousel-caption d-none d-md-block">
             <h5>Cerro Manquehue</h5>
             <p>Parque para realizar senderismo en Santiago</p>
