--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
    <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
       <div class="container container-fluid">
-        <a class="navbar-brand" href="/">Todo Rutas</a>
+        <a class="navbar-brand title-font" href="/">Todo Rutas</a>
         
         <!-- Toggle button para movil -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
