--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
           <div class="container container-fluid">
-            <a class="navbar-brand" href="/">Todo Rutas</a>
+            <a class="navbar-brand title-font" href="/">Todo Rutas</a>
             
             <!-- Toggle button para movil -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,7 +59,7 @@
     <div>
       <img src="./public/images/index.jpg" class="d-block w-100" alt="CerroManquehue" height="300px" style="filter: brightness(20%)">
       <div class="carousel-caption">
-        <h2 style="font-size:60px">Todo Rutas</h2>
+        <h2 style="font-size:60px;" class="title-font">Todo Rutas</h2>
         <a class="btn btn-primary-index"  href="./parques.html">Ver parques</a>            
       </div>
     </div>
