--- a/login-afiliado.html
+++ b/login-afiliado.html
@@ -20,40 +20,40 @@
 </head>
 <body>
     <!-- Header -->
-   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-      <div class="container container-fluid">
-        <a class="navbar-brand" href="/">Todo Rutas</a>
-        
-        <!-- Toggle button para movil -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <!-- Links -->
-        <div class="collapse navbar-collapse justify-content-end align-center" id="mainNav">
-          <ul class="navbar-nav mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="./parques.html">Parques</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="./about.html">Contacto</a>
-            </li>
-            <li class="nav-item button">
-              <a class="btn btn-dark  nav-link" aria-current="page" href="#">Dar ubicación</a>
-            </li>
-          </ul>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+        <div class="container container-fluid">
+          <a class="navbar-brand title-font" href="/">Todo Rutas</a>
+          
+          <!-- Toggle button para movil -->
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+  
+          <!-- Links -->
+          <div class="collapse navbar-collapse justify-content-end align-center" id="mainNav">
+            <ul class="navbar-nav mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="./parques.html">Parques</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="./about.html">Contacto</a>
+              </li>
+              <li class="nav-item button">
+                <a class="btn btn-dark  nav-link" aria-current="page" href="#">Dar ubicación</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
-</header>
+      </nav>
+  </header>
 
     <div class="container my-3">
       <!-- Login -->
-      <form action="./mantenedor/listar.html" method="get">
+      <form action="./mantenedor/listar-parques.html" method="get">
         <div class="container h-100">
           <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-12 col-md-8 col-lg-6 col-xl-5">
