--- a/mantenedor/listar-empleado.html
+++ b/mantenedor/listar-empleado.html
@@ -32,7 +32,7 @@
         <div class="collapse navbar-collapse justify-content-center" id="mainNav">
           <ul class="navbar-nav mb-2 mb-lg-0">
               <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="/mantenedor/agregar.html">Cerrar Sesión</a>
+                  <a class="nav-link" aria-current="page" href="../index.html">Cerrar Sesión</a>
               </li>
           </ul>
         </div>
@@ -65,7 +65,6 @@
         <tbody>
           <tr class="text-center">
               <td>1</td>
-              <td>1</td>
               <td>Torres del Paine</td>
               <td>Puerto Natales</td>
               <td>(56-61) 2238581</td>
@@ -81,7 +80,6 @@
           </tr>
 
           <tr class="text-center">
-            <td>2</td>
             <td>2</td>
             <td>Cerro Manquehue</td>
             <td>Vía Roja 10300, Lo Curro</td>
