--- a/mantenedor/listar-empleado.html
+++ b/mantenedor/listar-empleado.html
@@ -48,7 +48,6 @@
       <table class="table table-striped table-hover">
         <thead class="thead-dark">
             <tr class="text-center">
-                <th scope="col">Código</th>
                 <th scope="col">Tipo</th>
                 <th scope="col">Nombre</th>
                 <th scope="col">Dirección</th>
@@ -74,7 +73,7 @@
               <td>Lun-Dom 8-19hrs</td>
               <td>https://torresdelpaine.com/</td>
               <td>https://www.aspticket.cl/</td>
-              <td><a href="/mantenedor/editar/1" class="btn btn-success m-1 py-1 px-2">
+              <td><a href="editar-parque-empleado.html" class="btn btn-success m-1 py-1 px-2">
                   <i class="fa fa-pencil" aria-hidden="true"></i> </a> 
               </td>
           </tr>
@@ -90,7 +89,7 @@
             <td>Lun-Dom 8-20hrs</td>
             <td></td>
             <td></td>
-            <td><a href="/mantenedor/editar/2" class="btn btn-success m-1 py-1 px-2">
+            <td><a href="editar-parque-empleado.html" class="btn btn-success m-1 py-1 px-2">
                 <i class="fa fa-pencil" aria-hidden="true"></i> </a> 
             </td>
         </tr>
